Replace . reference to improve speed

--- a/articles/Efficient_String_Concatenation_in_Python.ipynb
+++ b/articles/Efficient_String_Concatenation_in_Python.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:35e3a69e5367d569cd0708f744721824e3aa1f2bbc87548b902a305f2e2ea8d1"
+  "signature": "sha256:b7d4fee536771fc6e63725562af7b226565a5c3ca6d6a9cb0126df0c11d2021e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -85,7 +85,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 225
+     "prompt_number": 281
     },
     {
      "cell_type": "code",
@@ -278,7 +278,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 226
+     "prompt_number": 282
     },
     {
      "cell_type": "markdown",
@@ -308,7 +308,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 227
+     "prompt_number": 283
     },
     {
      "cell_type": "code",
@@ -322,13 +322,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 59,
+       "prompt_number": 284,
        "text": [
-        "'0123456789101112131415161718192021222324252627282930313233343536373839404142434445464748495051525354555657585960616263646566676869707172737475767778798081828384858687888990919293949596979899'"
+        "'012345678910111213141516171819'"
        ]
       }
      ],
-     "prompt_number": 59
+     "prompt_number": 284
     },
     {
      "cell_type": "code",
@@ -467,7 +467,88 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 228
+     "prompt_number": 285
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### lookup \ubd80\ud558 \uc904\uc774\uae30(\uae40\ud0dc\ud638\ub2d8 \uc758\uacac)\n",
+      "\n",
+      "- l.append\ub97c ll\ub85c \ubcc0\uacbd\n",
+      "- .\uc5f0\uc0b0\uc790\uac00 \uc788\uc73c\uba74 \ucc38\uc870\ud558\uae30 \uc704\ud574 \ub290\ub824\uc9c0\uae30 \ub54c\ubb38\uc5d0 \uadf8 \ucc38\uc870\ud558\ub294 \uc18d\ub3c4\ub3c4 \uc904\uc774\uae30 \uc704\ud568\n",
+      "- for\ubb38 \uc548\uc5d0\uc11c \uadf9\ud55c\uc758 \uc18d\ub3c4\ub97c \uc5bb\uae30 \uc704\ud574\uc11c\ub294 .\uc73c\ub85c \ucc38\uc870\ud558\ub294 \uac83\ub3c4 \uc0ac\uc6a9\ud558\uc9c0 \ub9d0\uc790"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "l = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 304
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ll = l.append"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 305
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ll(5)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 308
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "l"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 309,
+       "text": [
+        "[1, 5]"
+       ]
+      }
+     ],
+     "prompt_number": 309
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def method4_2():\n",
+      "    str_list = []\n",
+      "    str_list2 = str_list.append\n",
+      "    for num in xrange(loop_count):\n",
+      "        str_list2(`num`)\n",
+      "    out_str = ''.join(str_list)\n",
+      "    return out_str"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 310
     },
     {
      "cell_type": "markdown",
@@ -494,7 +575,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 229
+     "prompt_number": 286
     },
     {
      "cell_type": "markdown",
@@ -518,7 +599,21 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 230
+     "prompt_number": 287
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# generator\ub85c \uc0dd\uc131\n",
+      "def method7():\n",
+      "    out_str = ''.join((`num` for num in xrange(loop_count)))\n",
+      "    return out_str"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 288
     },
     {
      "cell_type": "markdown",
@@ -538,7 +633,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 233
+     "prompt_number": 320
     },
     {
      "cell_type": "code",
@@ -553,11 +648,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "100 loops, best of 3: 2.56 ms per loop\n"
+        "100 loops, best of 3: 2.58 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 234
+     "prompt_number": 321
     },
     {
      "cell_type": "code",
@@ -582,11 +677,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "100 loops, best of 3: 6.4 ms per loop\n"
+        "100 loops, best of 3: 6.45 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 235
+     "prompt_number": 322
     },
     {
      "cell_type": "code",
@@ -601,11 +696,31 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "100 loops, best of 3: 2.82 ms per loop\n"
+        "100 loops, best of 3: 2.84 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 236
+     "prompt_number": 323
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# \ud655\uc2e4\ud788 \ube68\ub77c\uc84c\ub2e4!\n",
+      "%timeit method4_2()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "100 loops, best of 3: 2.07 ms per loop\n"
+       ]
+      }
+     ],
+     "prompt_number": 324
     },
     {
      "cell_type": "code",
@@ -620,11 +735,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "100 loops, best of 3: 7.57 ms per loop\n"
+        "100 loops, best of 3: 7.66 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 237
+     "prompt_number": 325
     },
     {
      "cell_type": "code",
@@ -639,11 +754,61 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1000 loops, best of 3: 1.74 ms per loop\n"
+        "1000 loops, best of 3: 1.76 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 238
+     "prompt_number": 326
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%timeit method7()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "100 loops, best of 3: 2.1 ms per loop\n"
+       ]
+      }
+     ],
+     "prompt_number": 327
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### \uc18d\ub3c4\n",
+      "\n",
+      "- [\ub2f9\ub2f9\ud55c \uc790\uae30\ud45c\ud604 : \ucef4\ud4e8\ud130 ms, us, ns, ps, fs, as](http://sea1sun.egloos.com/viewer/8879042)\n",
+      "\n",
+      "#### \ucef4\ud4e8\ud130 \ucc98\ub9ac \uc18d\ub3c4 \ub2e8\uc704\n",
+      "\n",
+      "- \ubc00\ub9ac\ucd08(ms) : 1/1,000\ucd08\n",
+      "- \ub9c8\uc774\ud06c\ub85c\ucd08(\u03bcs) : 1/1,000,000\ucd08\n",
+      "- \ub098\ub178\ucd08(ns) : 1/1,000,000,000\ucd08\n",
+      "- \ud53c\ucf54\ucd08(ps) : 1/1,000,000,000,000\ucd08\n",
+      "- \ud3a8\ud1a0\ucd08(fs) : 1/1,000,000,000,000,000\ucd08\n",
+      "- \uc544\ud1a0\ucd08(as) : 1/1,000,000,000,000,000,000\ucd08\n",
+      "- ms : \ubc00\ub9ac\ucd08 0.001 = 10^(-3)\ucd08\n",
+      "- \u33b2 : \ub9c8\uc774\ud06c\ub85c\ucd08 0.000001\ucd08 = 10^(-6)\ucd08\n",
+      "- \u33b1: \ub098\ub178\ucd08 0.000000001\ucd08 = 10^(-9)\ucd08\n",
+      "- \u33b0 : \ud53c\ucf54\ucd08 0.000000000001\ucd08 = 10^(-12)\ucd08\n",
+      "- fs : \ud3a8\ud1a0\ucd08 0.000000000000001\ucd08 = 10^(-15)\ucd08\n",
+      "- as : \uc544\ud1a0\ucd08 0.000000000000000001\ucd08 = 10^(-18)\ucd08\n",
+      "\n",
+      "\n",
+      "- 1024byte = 1KB (kilo byte)\n",
+      "- 1024KB = 1MB (mega byte)\n",
+      "- 1024MB = 1GB (giga byte) = 1048576 KB\n",
+      "- 1024GB = 1TB (tela byte)\n",
+      "- 1024TB = 1PB (peta byte)"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -668,12 +833,14 @@
       "### \uacb0\uacfc\uac00 \uc774\uc0c1\ud55c\ub370?\n",
       "\n",
       "1. method6: list comprehension\n",
-      "2. method1: string concatenating\n",
-      "3. method4: list append\n",
+      "2. method4_2: list append(.\uc5f0\uc0b0\uc790 \uc811\uadfc \uc5c6\uc570)\n",
+      "3. method1: string concatenating\n",
+      "4. method4: list append\n",
       "\n",
       "\n",
       "- \uc6d0\ub798 \ube14\ub85c\uadf8\uc5d0\uc11c \ubcf4\uc5ec\uc900 \uac83\uacfc \ub2e4\ub978 \uacb0\uacfc\uac00 \ub098\ud0c0\ub09c\ub2e4.\n",
       "- method1\uc774 method4\ubcf4\ub2e4 \ube60\ub978\uac8c \uc774\ud574\uac00 \uc548\ub41c\ub2e4. string\uc774 \ubcc0\uacbd\ub418\uc9c0 \uc54a\ub294 \uac1d\uccb4\uc774\uae30 \ub54c\ubb38\uc5d0 \ub9e4\ubc88 \uc0dd\uc131\ub418\uc11c \ub290\ub9b4\uac83 \uac19\uc740\ub370 \uacb0\uacfc\ub294 \ub354 \ube60\ub974\ub124?(**\uac00\uc7a5 \uc774\ud574 \uc548\ub418\ub294 \uacb0\uacfc**)\n",
+      "- method4_2\uc5d0\uc11c **.\uc5f0\uc0b0\uc790\ub85c \ucc38\uace0\ud558\ub294 \uac83\ub3c4 \uc904\uc600\ub354\ub2c8** \uc18d\ub3c4\uac00 \uc880 \ub354 **\ube68\ub77c\uc84c\ub2e4**.\n",
       "- method5 \uac19\uc740 \uacbd\uc6b0\uc5d0\ub294 memory\uc5d0 \uc4f8\uac83 \uac19\uc740\ub370 \uc2e4\uc81c temp \ud30c\uc77c\ub85c \uc4f0\ub098? \uc65c \uc774\ub9ac \uc18d\ub3c4\uac00 \ub290\ub9ac\uc9c0?\n",
       "- \ucc38\uace0\ub85c \ub0b4 \ucef4\ud4e8\ud130\ub294 \ub9e5\ubd81 \ud504\ub85c \ub808\ud2f0\ub098\uc784"
      ]
