Modify wrong words

--- a/articles/Transforming_code_into_Beautiful_Idiomatic_Python.ipynb
+++ b/articles/Transforming_code_into_Beautiful_Idiomatic_Python.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:6f444c2ad20e7448acfeb3435dfa05e198495ba7bb70e40bc00b862d7c349a10"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -55,27 +56,29 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def middle_range(n=6):\n",
+      "def middle_range(n=10000000):\n",
       "    for i in range(n):\n",
-      "        print i**2"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def advanced_range(n=6):\n",
-      "    for i in xrange(n):\n",
-      "        print i**2"
+      "        pass\n",
+      "#         print i**2"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def advanced_range(n=10000000):\n",
+      "    for i in xrange(n):\n",
+      "        pass\n",
+      "#         print i**2"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -99,7 +102,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -109,21 +112,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0\n",
-        "1\n",
-        "4\n",
-        "9\n",
-        "16\n",
-        "25\n"
-       ]
-      }
-     ],
-     "prompt_number": 5
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -133,21 +123,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0\n",
-        "1\n",
-        "4\n",
-        "9\n",
-        "16\n",
-        "25\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -162,11 +139,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10000000 loops, best of 3: 26.7 ns per loop\n"
+        "10000000 loops, best of 3: 28.8 ns per loop\n"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -181,11 +158,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10000000 loops, best of 3: 31 ns per loop\n"
+        "10000000 loops, best of 3: 27.7 ns per loop\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -200,11 +177,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10000000 loops, best of 3: 31.1 ns per loop\n"
+        "10000000 loops, best of 3: 27.8 ns per loop\n"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -219,11 +196,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10000000 loops, best of 3: 59 ns per loop\n"
+        "10000000 loops, best of 3: 58.8 ns per loop\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -238,11 +215,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "10000000 loops, best of 3: 57.5 ns per loop\n"
+        "10000000 loops, best of 3: 58.6 ns per loop\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -275,7 +252,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -451,7 +428,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -465,13 +442,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 15,
        "text": [
         "['red', 'green', 'blue', 'yellow']"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -551,6 +528,29 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "zip(names, colors)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "[('\\xea\\xb7\\xbc\\xec\\x98\\x81', 'red'),\n",
+        " ('\\xec\\x9c\\xbc\\xeb\\xa6\\xac \\xed\\x8c\\x8c\\xec\\x9d\\xb4\\xec\\x8d\\xac', 'green'),\n",
+        " ('\\xed\\x8c\\x8c\\xec\\x9d\\xb4\\xec\\x8d\\xac\\xec\\x9d\\x84 \\xed\\x99\\x9c\\xec\\x9a\\xa9\\xed\\x95\\x9c \\xeb\\x8d\\xb0\\xec\\x9d\\xb4\\xed\\x84\\xb0\\xeb\\xb6\\x84\\xec\\x84\\x9d \\xec\\x97\\x84\\xec\\xb2\\xad \\xec\\x96\\xb4\\xeb\\xa0\\xa4\\xec\\x9b\\x8c!!',\n",
+        "  'blue')]"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "for name, color in zip(names, colors):\n",
       "    print name, '-->', color"
      ],
@@ -573,6 +573,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "izip(names, colors)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "<itertools.izip at 0x1032a9ab8>"
+       ]
+      }
+     ],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# iteration\uc73c\ub85c \ub9cc\ub4e4\uc5b4\uc918\uc11c \uba54\ubaa8\ub9ac \uc808\uc57d\n",
       "from itertools import izip\n",
       "for name, color in izip(names, colors):\n",
       "    print name, '-->', color"
@@ -590,7 +611,7 @@
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -765,13 +786,13 @@
      "prompt_number": 34
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Type:        builtin_function_or_method\n",
-      "String form: <built-in function sorted>\n",
-      "Namespace:   Python builtin\n",
-      "Docstring:   sorted(iterable, cmp=None, key=None, reverse=False) --> new sorted list"
+      "    Type:        builtin_function_or_method\n",
+      "    String form: <built-in function sorted>\n",
+      "    Namespace:   Python builtin\n",
+      "    Docstring:   sorted(iterable, cmp=None, key=None, reverse=False) --> new sorted list"
      ]
     },
     {
@@ -981,15 +1002,15 @@
      "prompt_number": 46
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Type:        type\n",
-      "String form: <type 'functools.partial'>\n",
-      "File:        /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/functools.py\n",
-      "Docstring:\n",
-      "partial(func, *args, **keywords) - new function with partial application\n",
-      "of the given arguments and keywords."
+      "    Type:        type\n",
+      "    String form: <type 'functools.partial'>\n",
+      "    File:        /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/functools.py\n",
+      "    Docstring:\n",
+      "    partial(func, *args, **keywords) - new function with partial application\n",
+      "    of the given arguments and keywords."
      ]
     },
     {
@@ -1573,6 +1594,50 @@
       }
      ],
      "prompt_number": 73
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "enumerate(names)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": [
+        "<enumerate at 0x1032949b0>"
+       ]
+      }
+     ],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# iterator \ud615\uc2dd\uc744 list\ub85c \ucd94\ucd9c\ud574 \ubcf4\uae30\n",
+      "list(enumerate(names))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "[(0, '\\xea\\xb7\\xbc\\xec\\x98\\x81'),\n",
+        " (1, '\\xec\\x9c\\xbc\\xeb\\xa6\\xac \\xed\\x8c\\x8c\\xec\\x9d\\xb4\\xec\\x8d\\xac'),\n",
+        " (2,\n",
+        "  '\\xed\\x8c\\x8c\\xec\\x9d\\xb4\\xec\\x8d\\xac\\xec\\x9d\\x84 \\xed\\x99\\x9c\\xec\\x9a\\xa9\\xed\\x95\\x9c \\xeb\\x8d\\xb0\\xec\\x9d\\xb4\\xed\\x84\\xb0\\xeb\\xb6\\x84\\xec\\x84\\x9d \\xec\\x97\\x84\\xec\\xb2\\xad \\xec\\x96\\xb4\\xeb\\xa0\\xa4\\xec\\x9b\\x8c!!')]"
+       ]
+      }
+     ],
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -2651,9 +2716,10 @@
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "```python\n",
       "tmp_x = x + dx * t\n",
       "tmp_y = y + dy * t\n",
       "tmp_dx = influence(m, x, y, dx, dy, partial='x')\n",
@@ -2661,17 +2727,20 @@
       "x = tmp_x\n",
       "y = tmp_y\n",
       "dx = tmp_dx\n",
-      "dy = tmp_dy"
+      "dy = tmp_dy\n",
+      "```"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "```python\n",
       "x, y, dx, dy = (x + dx * t,\n",
       "                y + dy * t,\n",
       "                influence(m, x, y, dx, dy, partial='x'),\n",
-      "                influence(,m x, y, dx, dy, partial='y'))"
+      "                influence(,m x, y, dx, dy, partial='y'))\n",
+      "```"
      ]
     },
     {
@@ -2689,7 +2758,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Concatenating strings"
+      "## Concatenating strings\n",
+      "\n",
+      "- [Efficient String Concatenation in Python](http://www.skymind.com/~ocrow/python_string/): \uad49\uc7a5\ud788 \uc88b\ub2e4. \uadf8\ub798\ud504\ub85c \uc774\uc058\uac8c \ud45c\ud604\ub418\uc5b4 \uc788\uc74c"
      ]
     },
     {
@@ -3113,12 +3184,12 @@
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "deque.append      deque.count       deque.maxlen      deque.popleft     deque.rotate      \n",
-      "deque.appendleft  deque.extend      deque.mro         deque.remove      \n",
-      "deque.clear       deque.extendleft  deque.pop         deque.reverse  "
+      "    deque.append      deque.count       deque.maxlen      deque.popleft     deque.rotate      \n",
+      "    deque.appendleft  deque.extend      deque.mro         deque.remove      \n",
+      "    deque.clear       deque.extendleft  deque.pop         deque.reverse  "
      ]
     },
     {
@@ -3130,7 +3201,7 @@
       "- \uad00\ub9ac\ud558\ub294 \ub85c\uc9c1\uc5d0\uc11c \ube44\uc988\ub2c8\uc2a4 \ub85c\uc9c1\uc744 \ubd84\ud560\ud558\ub294\uac8c \uc88b\ub2e4.\n",
       "- \uba85\ud655\ud558\uace0, \uc544\ub984\ub2f5\uac8c \ud558\ub824\uba74 code\ub97c \uc7ac\uad6c\uc131\ud558\uace0 code \uc7ac\uc0ac\uc6a9\uc0c1\uc744 \ud5a5\uc0c1 \uc2dc\ud0a8\ub2e4.\n",
       "- \uc88b\uc740 \uc774\ub984\uc740 \ud544\uc218\n",
-      "- spiderman \ub8f0\uc744 \uae30\uc5b5\ud574\ub77c: \uc88b\uc740 \ud798\uc744 \ub0b4\uba74 \uc5c4\uccad\ub09c \ucc45\uc784\uc774 \uc628\ub2e4.\n",
+      "- spiderman \ub8f0\uc744 \uae30\uc5b5\ud574\ub77c: \ud798\uc5d0\ub294 \ucc45\uc784\uc774 \ub530\ub978\ub2e4.\n",
       "\n",
       "## Using decorators to factor-out administrative logic\n",
       "\n",
@@ -3285,22 +3356,22 @@
      "prompt_number": 166
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "---------------------------------------------------------------------------\n",
-      "RuntimeError                              Traceback (most recent call last)\n",
-      "<ipython-input-361-27ac44ec7929> in <module>()\n",
-      "----> 1 print web_lookup2(url)[:100]\n",
+      "    ---------------------------------------------------------------------------\n",
+      "    RuntimeError                              Traceback (most recent call last)\n",
+      "    <ipython-input-361-27ac44ec7929> in <module>()\n",
+      "    ----> 1 print web_lookup2(url)[:100]\n",
       "\n",
-      "<ipython-input-355-887374cafa10> in newfunc(*args)\n",
-      "      6     def newfunc(*args):\n",
-      "      7         if args in saved:\n",
-      "----> 8             return newfunc(*args)\n",
-      "      9         result = func(*args)\n",
-      "     10         saved[args] = result\n",
+      "    <ipython-input-355-887374cafa10> in newfunc(*args)\n",
+      "          6     def newfunc(*args):\n",
+      "          7         if args in saved:\n",
+      "    ----> 8             return newfunc(*args)\n",
+      "          9         result = func(*args)\n",
+      "         10         saved[args] = result\n",
       "\n",
-      "RuntimeError: maximum recursion depth exceeded in cmp"
+      "    RuntimeError: maximum recursion depth exceeded in cmp"
      ]
     },
     {
@@ -3391,14 +3462,14 @@
      "prompt_number": 170
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Returns this thread's context.\n",
+      "    Returns this thread's context.\n",
       "\n",
-      "If this thread does not yet have a context, returns\n",
-      "a new context and sets this thread's context.\n",
-      "New contexts are copies of DefaultContext."
+      "    If this thread does not yet have a context, returns\n",
+      "    a new context and sets this thread's context.\n",
+      "    New contexts are copies of DefaultContext."
      ]
     },
     {
@@ -3538,7 +3609,6 @@
      "source": [
       "## How to open and close files\n",
       "\n",
-      "- try \ud560 \ud544\uc694\ub3c4 \uc5c6\uc74c. \ud30c\uc77c \uc5f4\ub2e4\uac00 \uc5d0\ub7ec\ub098\uba74 \ubc14\ub85c \uc5d0\ub7ec \ub0b4\ubc49\uc74c!\n",
       "- finally\ub85c \ub2eb\uc544\uc904 \ud544\uc694\uac00 \uc5c6\uc74c"
      ]
     },
@@ -3670,7 +3740,7 @@
      "source": [
       "## How to use locks\n",
       "\n",
-      "- with: try \ud560 \ud544\uc694 \uc5c6\uace0, finally \ud560 \ud544\uc694\uc5c6\uace0"
+      "- finally\uc5d0\uc11c lock release\ub97c \ud574\uc8fc\uc9c0 \uc54a\uc544\ub3c4 \ub41c\ub2e4. \uc790\ub3d9\uc73c\ub85c \ud574\uc81c\ud574 \uc900\ub2e4."
      ]
     },
     {
