--- a/articles/Efficient_String_Concatenation_in_Python.ipynb
+++ b/articles/Efficient_String_Concatenation_in_Python.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b7d4fee536771fc6e63725562af7b226565a5c3ca6d6a9cb0126df0c11d2021e"
+  "signature": "sha256:0726660b8f2ee16f37b3438fd53e6b6ce9612c29f721cab4f3d41fb02db4dd6b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -489,7 +489,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 304
+     "prompt_number": 374
     },
     {
      "cell_type": "code",
@@ -500,23 +500,44 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 305
+     "prompt_number": 375
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ll(5)"
+      "ll(1)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 308
+     "prompt_number": 376
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "ll"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 377,
+       "text": [
+        "<function append>"
+       ]
+      }
+     ],
+     "prompt_number": 377
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ll(10)\n",
       "l"
      ],
      "language": "python",
@@ -525,13 +546,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 309,
+       "prompt_number": 378,
        "text": [
-        "[1, 5]"
+        "[1, 10]"
        ]
       }
      ],
-     "prompt_number": 309
+     "prompt_number": 378
     },
     {
      "cell_type": "code",
@@ -842,7 +863,12 @@
       "- method1\uc774 method4\ubcf4\ub2e4 \ube60\ub978\uac8c \uc774\ud574\uac00 \uc548\ub41c\ub2e4. string\uc774 \ubcc0\uacbd\ub418\uc9c0 \uc54a\ub294 \uac1d\uccb4\uc774\uae30 \ub54c\ubb38\uc5d0 \ub9e4\ubc88 \uc0dd\uc131\ub418\uc11c \ub290\ub9b4\uac83 \uac19\uc740\ub370 \uacb0\uacfc\ub294 \ub354 \ube60\ub974\ub124?(**\uac00\uc7a5 \uc774\ud574 \uc548\ub418\ub294 \uacb0\uacfc**)\n",
       "- method4_2\uc5d0\uc11c **.\uc5f0\uc0b0\uc790\ub85c \ucc38\uace0\ud558\ub294 \uac83\ub3c4 \uc904\uc600\ub354\ub2c8** \uc18d\ub3c4\uac00 \uc880 \ub354 **\ube68\ub77c\uc84c\ub2e4**.\n",
       "- method5 \uac19\uc740 \uacbd\uc6b0\uc5d0\ub294 memory\uc5d0 \uc4f8\uac83 \uac19\uc740\ub370 \uc2e4\uc81c temp \ud30c\uc77c\ub85c \uc4f0\ub098? \uc65c \uc774\ub9ac \uc18d\ub3c4\uac00 \ub290\ub9ac\uc9c0?\n",
-      "- \ucc38\uace0\ub85c \ub0b4 \ucef4\ud4e8\ud130\ub294 \ub9e5\ubd81 \ud504\ub85c \ub808\ud2f0\ub098\uc784"
+      "- \ucc38\uace0\ub85c \ub0b4 \ucef4\ud4e8\ud130\ub294 \ub9e5\ubd81 \ud504\ub85c \ub808\ud2f0\ub098\uc784\n",
+      "\n",
+      "### Profiling\n",
+      "\n",
+      "- \ud504\ub85c\ud30c\uc77c\ub9c1\uc744 \ud558\uba74 \uc5b4\ub5a4 \ud568\uc218\uc5d0\uc11c \uc2dc\uac04\uc774 \uc624\ub798 \uc18c\ubaa8\ub418\ub294\uc9c0 \uc54c \uc218 \uc788\uc73c\ub2c8\uae4c \uc88b\uc744\uac83 \uac19\uc740\ub370?\n",
+      "- \ud504\ub85c\ud30c\uc77c\ub9c1\uc5d0 \ub300\ud574\uc11c \ud55c \ubc88 \uc870\uc0ac\ub97c \ud574\ubd10\uc57c\uaca0\ub2e4"
      ]
     },
     {
@@ -1221,6 +1247,15 @@
       "\tps_stats()\n",
       "\treturn out_str\n",
       "\n",
+      "def method4_2():\n",
+      "\tstr_list = []\n",
+      "\tstr_list2 = str_list.append\n",
+      "\tfor num in xrange(loop_count):\n",
+      "\t\tstr_list2(`num`)\n",
+      "\tout_str = ''.join(str_list)\n",
+      "\tps_stats()\n",
+      "\treturn out_str\n",
+      "\n",
       "def method5():\n",
       "\tfile_str = StringIO()\n",
       "\tfor num in xrange(loop_count):\n",
@@ -1273,7 +1308,7 @@
        ]
       }
      ],
-     "prompt_number": 217
+     "prompt_number": 379
     },
     {
      "cell_type": "code",
@@ -1289,14 +1324,14 @@
        "stream": "stdout",
        "text": [
         "method 1\r\n",
-        "time 2.24301815033\r\n",
+        "time 2.25088596344\r\n",
         "output size  477 kb\r\n",
-        "process size 4860 kb\r\n",
+        "process size 4616 kb\r\n",
         "\r\n"
        ]
       }
      ],
-     "prompt_number": 253
+     "prompt_number": 388
     },
     {
      "cell_type": "code",
@@ -1312,14 +1347,14 @@
        "stream": "stdout",
        "text": [
         "method 1\n",
-        "time 2.36761569977\n",
+        "time 2.80869007111\n",
         "output size  477 kb\n",
-        "process size 55540 kb\n",
+        "process size 59764 kb\n",
         "\n"
        ]
       }
      ],
-     "prompt_number": 254
+     "prompt_number": 389
     },
     {
      "cell_type": "code",
@@ -1335,14 +1370,14 @@
        "stream": "stdout",
        "text": [
         "method 2\n",
-        "time 184.970784187\n",
+        "time 185.649013519\n",
         "output size  477 kb\n",
-        "process size 55724 kb\n",
+        "process size 59452 kb\n",
         "\n"
        ]
       }
      ],
-     "prompt_number": 255
+     "prompt_number": 390
     },
     {
      "cell_type": "code",
@@ -1358,14 +1393,14 @@
        "stream": "stdout",
        "text": [
         "method 3\n",
-        "time 4.56790924072\n",
+        "time 4.83219623566\n",
         "output size  477 kb\n",
-        "process size 54212 kb\n",
+        "process size 58760 kb\n",
         "\n"
        ]
       }
      ],
-     "prompt_number": 256
+     "prompt_number": 391
     },
     {
      "cell_type": "code",
@@ -1381,20 +1416,20 @@
        "stream": "stdout",
        "text": [
         "method 4\r\n",
-        "time 2.39241123199\r\n",
+        "time 2.69351005554\r\n",
         "output size  477 kb\r\n",
-        "process size 10304 kb\r\n",
+        "process size 10336 kb\r\n",
         "\r\n"
        ]
       }
      ],
-     "prompt_number": 257
+     "prompt_number": 392
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%run tmp/original_str_performance.py 4"
+      "%run tmp/original_str_performance.py 4_2"
      ],
      "language": "python",
      "metadata": {},
@@ -1403,15 +1438,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "method 4\n",
-        "time 2.71439552307\n",
+        "method 4_2\n",
+        "time 2.11400985718\n",
         "output size  477 kb\n",
-        "process size 56408 kb\n",
+        "process size 62208 kb\n",
         "\n"
        ]
       }
      ],
-     "prompt_number": 258
+     "prompt_number": 393
     },
     {
      "cell_type": "code",
@@ -1427,14 +1462,14 @@
        "stream": "stdout",
        "text": [
         "method 5\n",
-        "time 5.48570156097\n",
+        "time 5.35268783569\n",
         "output size  477 kb\n",
-        "process size 55140 kb\n",
+        "process size 59916 kb\n",
         "\n"
        ]
       }
      ],
-     "prompt_number": 259
+     "prompt_number": 394
     },
     {
      "cell_type": "code",
@@ -1450,14 +1485,14 @@
        "stream": "stdout",
        "text": [
         "method 6\n",
-        "time 1.90780162811\n",
+        "time 1.88450813293\n",
         "output size  477 kb\n",
-        "process size 55324 kb\n",
+        "process size 59892 kb\n",
         "\n"
        ]
       }
      ],
-     "prompt_number": 260
+     "prompt_number": 395
     },
     {
      "cell_type": "markdown",
