Add about WordNet explain

--- a/books/Natural_Language_Processing_With_Python/ch02.ipynb
+++ b/books/Natural_Language_Processing_With_Python/ch02.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:920967a5f69833f02598b715d413b5748b3ac97d62a06460d99deacf3aa35104"
+  "signature": "sha256:4cc368fc4eec47aaf2a3355e2b4356ae9afd0e5c2dfaf5be270103415db2c9b8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -4674,6 +4674,13 @@
      "prompt_number": 394
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### samples\uc5d0 \uc5c9\ub6b1\ud55c \uac12\uc774 \ub4e4\uc5b4\uac00\uba74 \uc548\ub428"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -6160,6 +6167,13 @@
      "prompt_number": 477
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### \ucf58\ud150\ud2b8\uc5d0\uc11c stopwords\ub97c \ube7c\uace0 \uc720\uc758\ubbf8\ud55c \uacb0\uacfc\ub9cc \ub098\uc628\uac83"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -6206,8 +6220,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- wordlist: word puzzles \ud478\ub294\ub370 \uc720\uc6a9\ud558\ub2e4.\n",
-      "- "
+      "- wordlist: word puzzles \ud478\ub294\ub370 \uc720\uc6a9\ud558\ub2e4."
      ]
     },
     {
@@ -6235,6 +6248,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
+      "# r\ub9cc \ub4e4\uc5b4\uc788\ub294 \ub2e8\uc5b4\ub4e4\ub9cc \ucd94\ucd9c\n",
       "obligatory = 'r'"
      ],
      "language": "python",
@@ -7866,14 +7880,47 @@
       "## 2.5 WordNet\n",
       "\n",
       "- WordNet: \uc758\ubbf8\uc0c1\uc73c\ub85c \uc601\uc5b4 \uc0ac\uc804\uc744 \uc9c0\ud5a5\ud55c\ub2e4.\n",
-      "- NLTK\uc740 English WordNet 155,287 \ub2e8\uc5b4\ub4e4\uacfc 117,659 \ub3d9\uc758\uc5b4 \ubb36\uc74c\uc744 \ud3ec\ud568\ud55c\ub2e4"
+      "- NLTK\uc740 English WordNet 155,287 \ub2e8\uc5b4\ub4e4\uacfc 117,659 \ub3d9\uc758\uc5b4 \ubb36\uc74c\uc744 \ud3ec\ud568\ud55c\ub2e4\n",
+      "- [\uc6cc\ub4dc\ub137 - \uc704\ud0a4\ubc31\uacfc, \uc6b0\ub9ac \ubaa8\ub450\uc758 \ubc31\uacfc\uc0ac\uc804](http://ko.wikipedia.org/wiki/%EC%9B%8C%EB%93%9C%EB%84%B7)\n",
+      "\n",
+      "![WordNet](http://cpl.cc.gatech.edu/projects/VisualSynset/apple.png)\n",
+      "\n",
+      "- synset\uc744 \ubd84\ub958\ud55c\ub2e4\n",
+      "- \uac19\uc740 \uc560\ud50c\uc778\ub370 \uc560\ud50c\uc774 \uc911\ubcf5\ub418\ub2c8\uae4c \uadf8\uac78 \ubd84\ub958\ud574\uc11c \uc758\ubbf8\ub97c \ucc3e\uc544\ub0b8\ub2e4\n",
+      "- class \uac1c\ub150\uc73c\ub85c \uc774\ud574\ud558\uba74 \ub41c\ub2e4\n",
+      "\n",
+      "### WordNet in wiki\n",
+      "\n",
+      "- \uc6cc\ub4dc\ub137\uc740 \uc601\uc5b4\uc758 \uc758\ubbf8 \uc5b4\ud718\ubaa9\ub85d\n",
+      "- \uc6cc\ub4dc\ub137\uc740 \uc601\uc5b4 \ub2e8\uc5b4\ub97c 'synset' \uc774\ub77c\ub294 \uc720\uc758\uc5b4 \uc9d1\ub2e8\uc73c\ub85c \ubd84\ub958\ud558\uc5ec \uac04\ub7b5\ud558\uace0 \uc77c\ubc18\uc801\uc778 \uc815\uc758\ub97c \uc81c\uacf5\ud558\uace0, \uc774\ub7ec\ud55c \uc5b4\ud718\ubaa9\ub85d \uc0ac\uc774\uc758 \ub2e4\uc591\ud55c \uad00\uacc4\ub97c \uae30\ub85d\ud568\n",
+      "- \ubaa9\uc801\uc740 2\uac00\uc9c0\n",
+      "  - \uc0ac\uc804(\ub2e8\uc5b4\uc9d1)\uacfc \uc2dc\uc18c\ub7ec\uc2a4(\uc720\uc758\uc5b4, \ubc18\uc758\uc5b4 \uc0ac\uc804)\uc758 \ubc30\ud569\uc744 \ub9cc\ub4e4\uc5b4, \ubcf4\ub2e4 \uc9c1\uad00\uc801\uc73c\ub85c \uc0ac\uc6a9 \uac00\ub2a5\n",
+      "  - \uc790\ub3d9\ud654\ub41c \ubcf8\ubb38 \ubd84\uc11d\uacfc \uc778\uacf5 \uc9c0\ub2a5 \uc751\uc6a9\uc744 \ub4b7\ubc1b\uce68\ud558\ub824\ub294 \uac83\n",
+      "- \ub370\uc774\ud130\ubca0\uc774\uc2a4\uc640 \ud504\ub85c\uadf8\ub7a8 \ud234\uc740 BSD \ud615\ud0dc\uc758 \ub77c\uc774\uc120\uc2a4\ub85c \ubc30\ud3ec\ub418\uc5c8\uace0, \ub2e4\uc6b4\ub85c\ub4dc \ubc1b\uc544 \uc790\uc720\ub86d\uac8c \uc0ac\uc6a9 \uac00\ub2a5\n",
+      "- \ub370\uc774\ud130\ubca0\uc774\uc2a4\ub294 \uc628\ub77c\uc778\uc73c\ub85c\ub3c4 \uac80\uc0c9 \uac00\ub2a5\n",
+      "- \uc6cc\ub4dc\ub137\uc740 \uc2ec\ub9ac\ud559 \uad50\uc218\uc778 \uc870\uc9c0 A. \ubc00\ub7ec\uac00 \uc9c0\ub3c4\ud558\ub294 \ud504\ub9ac\uc2a4\ud134 \ub300\ud559\uc758 \uc778\uc9c0 \uacfc\ud559 \uc5f0\uad6c\uc18c\uc5d0 \uc758\ud574 \ub9cc\ub4e4\uc5b4\uc84c\uace0 \uc720\uc9c0\ub418\uace0 \uc788\uc74c\n",
+      "- \uac1c\ubc1c\uc740 1985\ub144\uc5d0 \uc2dc\uc791\ub418\ub428\n",
+      "- \uc218\ub144\uc5d0 \uac78\uccd0, \ud504\ub85c\uc81d\ud2b8\ub294 3\ubc31\ub9cc \ub2ec\ub7ec\uc758 \uae30\uae08\uc744 \ubaa8\uc558\ub294\ub370, \uc8fc\ub85c \uae30\uacc4 \ubc88\uc5ed\uc5d0 \uad00\uc2ec\uc774 \uc788\ub294 \uc815\ubd80 \uae30\uad00\uc5d0 \uc758\ud55c \uac83\n",
+      "- \ucd5c\uadfc \uba87\ub144\uac04\uc740 \ud06c\ub9ac\uc2a4\ud2f0\uc548 \ud3a0\ubc14\uc6c0 \ubc15\uc0ac\uac00 \uc6cc\ub4dc\ub137\uc758 \uac1c\ubc1c\uc744 \uc0b4\ud53c\uace0 \uc788\uc74c\n",
+      "\n",
+      "#### \uc790\ub8cc \ub0b4\uc6a9\n",
+      "\n",
+      "- \uc6cc\ub4dc\ub137\uc740 \uba85\uc0ac, \ub3d9\uc0ac, \ud615\uc6a9\uc0ac, \ubd80\uc0ac\ub4e4\uc744 \uc11c\ub85c \uad6c\ubd84\ud558\ub294\ub370, \uc774\ub294 \uc774\ub4e4\uc774 \uc11c\ub85c \ub2e4\ub978 \ubb38\ubc95\uc801\uc778 \ubc95\uce59\uc744 \ub530\ub974\uae30 \ub54c\ubb38\n",
+      "- \ubaa8\ub4e0 (synset: \ub3d9\uc758\uc5b4 \uc9d1\ud569)\uc740 \ub2e8\uc5b4\uc758 \ub3d9\uc758\uc5b4 \uc9d1\ud569 \ub610\ub294 \uc5f0\uc5b4 \uad00\uacc4\ub97c \ud3ec\ud568\ud55c\ub2e4('\uc5f0\uc5b4 \uad00\uacc4'\ub294 \ub2e8\uc5b4\ub4e4\uc774 \uc21c\uc11c\ub300\ub85c \ub193\uc5ec \ud2b9\uc815 \uc758\ubbf8\ub97c \ud615\uc131\ud558\ub294 \uac83\uc744 \uc758\ubbf8)\n",
+      "- \uc11c\ub85c \ub2e4\ub978 \uc758\ubbf8\uc758 \ub2e8\uc5b4\ub294 \uc11c\ub85c \ub2e4\ub978 '\uc2e0\uc14b'\uc5d0 \ud3ec\ud568\ub428\n",
+      "- '\uc2e0\uc14b'\uc758 \uc758\ubbf8\ub294 \uac04\ub7b5\ud558\uac8c \uc815\uc758\ud558\ub294 \uc8fc\uc11d(\uc815\uc758 \ub610\ub294 \uc608\ubb38)\uc73c\ub85c \ubcf4\ub2e4 \uba85\ud655\ud574 \uc9d0\n",
+      "- \uc8fc\uc11d\uc774 \ubd99\uc740 \uc804\ud615\uc801\uc778 '\uc2e0\uc14b'\uc758 \uc608\ub294 \ub2e4\uc74c\uacfc \uac19\uc74c\n",
+      "- "
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Senses and Synonyms(\uac10\uac01\uacfc \ub3d9\uc758\uc5b4??)\n",
+      "### Senses and Synonyms\n",
+      "\n",
+      "- sense\n",
+      "- synonym: \uc720\uc758\uc5b4\n",
       "\n",
       "#### (1)\n",
       "\n",
@@ -7897,12 +7944,27 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 601
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Synset types:\n",
+      "\n",
+      "- n: **Noun**, \uba85\uc0ac, \uc81c\uc77c \uc911\uc694\n",
+      "- v: **Verb**, \ub3d9\uc0ac\n",
+      "- a: Adjective, \ud615\uc6a9\uc0ac \n",
+      "- s: Adjective Satellite, \ubcf4\uc870 \ud615\uc6a9\uc0ac\n",
+      "- r: Adverb, \ubd80\uc0ac"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# car:\n",
+      "# n: noun\n",
       "wn.synsets('motorcar')"
      ],
      "language": "python",
@@ -7911,13 +7973,43 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 602,
+       "prompt_number": 2,
        "text": [
         "[Synset('car.n.01')]"
        ]
       }
      ],
-     "prompt_number": 602
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# lemma\uc640 \ubc1c\uc74c tag\uc758 \ubd80\ubd84\uc744 \uc904 \uacbd\uc6b0 synsets\uc744 \ubd88\ub7ec\uc628\ub2e4.\n",
+      "# no pos\uc774 \uc815\uc758\ub418\uc5b4 \uc788\uc9c0 \uc54a\uc73c\uba74, \ubaa8\ub4e0 synsets\uc740 speech\uc758 \ubd80\ubd84\uc774 \ub85c\ub4dc\ub420 \uac83\uc774\ub2e4.\n",
+      "# \uc5b8\uc5b4\uac00 \uc120\ud0dd\ub418\uba74, \ubaa8\ub4e0 synsets\uc740 \uadf8 \uc5b8\uc5b4\uc758 \uc5f0\uad00\ub41c lemma name\uc744 \ub3cc\ub824\uc900\ub2e4.\n",
+      "help(wn.synsets)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Help on method synsets in module nltk.corpus.reader.wordnet:\n",
+        "\n",
+        "synsets(self, lemma, pos=None, lang=u'en') method of nltk.corpus.reader.wordnet.WordNetCorpusReader instance\n",
+        "    Load all synsets with a given lemma and part of speech tag.\n",
+        "    If no pos is specified, all synsets for all parts of speech\n",
+        "    will be loaded. \n",
+        "    If lang is specified, all the synsets associated with the lemma name\n",
+        "    of that language will be returned.\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -7930,6 +8022,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# lemma: \ub2e8\uc5b4\uc758 \uae30\ubcf8\ud615\n",
       "wn.synset('car.n.01').lemma_names()"
      ],
      "language": "python",
@@ -8180,7 +8273,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- Wordnet\ub294 \uac01 \uac1c\ub150\ub4e4\ub07c\ub9ac \uc27d\uac8c \uc774\ub3cc\ud560 \uc218 \uc788\uac8c \ub9cc\ub4e4\uc5b4\uc900\ub2e4.\n",
+      "- Wordnet\ub294 \uac01 \uac1c\ub150\ub4e4\ub07c\ub9ac \uc27d\uac8c \uc774\ub3d9\ud560 \uc218 \uc788\uac8c \ub9cc\ub4e4\uc5b4\uc900\ub2e4.\n",
       "- hyponyms: \ud558\uc704\uc5b4"
      ]
     },
@@ -8367,8 +8460,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- hypernyms: \uc0c1\uc704\uc5b4\n",
-      "- "
+      "- hypernyms: \uc0c1\uc704\uc5b4"
      ]
     },
     {
@@ -8579,8 +8671,8 @@
       "\n",
       "- lexical relations: Hypernym(\uc0c1\uc704\uc5b4), hyponym(\ud558\uc758\uc5b4)\n",
       "- \ub2e4\ub978 \uac83\ub4e4\uacfc \uad00\uacc4\uac00 \uc788\uae30 \ub54c\ubb38\n",
-      "- [meronyms](http://en.wikipedia.org/wiki/Meronymy): \uc5b8\uc5b4\ud559\uc758 \uc758\ubbf8\ub860\uc801 \uad00\uacc4\n",
-      "- [Holonymy](http://en.wikipedia.org/wiki/Holonymy): semantic relation\n",
+      "- [meronyms](http://en.wikipedia.org/wiki/Meronymy): \ubd80\ubd84\uc5b4. Y\uac00 X\uc758 \ubd80\ubd84\uc774\uba74 Y\ub294 X\uc758 \ubd80\ubd84\uc5b4\n",
+      "- [Holonymy](http://en.wikipedia.org/wiki/Holonymy): semantic relation, \uc804\uccb4\uc5b4, X\uac00 Y\uc758 \ubd80\ubd84\uc774\uba74 Y\ub294 X\uc758 \uc804\uccb4\uc5b4\n",
       "- substance_meronyms(): \ub098\ubb34\ub4e4\uc758 \ud3fc\uc5d0 \ub300\ud55c \ubaa8\uc74c. \uc232?"
      ]
     },
@@ -8588,6 +8680,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# burl: \ub9c8\ub514\n",
+      "# crown: \uaf2d\ub300\uae30\n",
+      "# limb: \ub098\ubb47\uac00\uc9c0\n",
+      "# stump: \uadf8\ub8e8\ud130\uae30\n",
+      "# trunk: \ub098\ubb34\uc758 \ubab8\ud1b5\n",
       "wn.synset('tree.n.01').part_meronyms()"
      ],
      "language": "python",
@@ -8612,6 +8709,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# heartwood: \uc2ec\uc7ac\n",
+      "# sapwood: \ubcc0\uc7ac(\ub098\ubb34\uaecd\uc9c8 \ubc14\ub85c \uc548\ucabd, \ud1b5\ub098\ubb34\uc758 \uac89 \ubd80\ubd84\uc5d0 \ud574\ub2f9\ud558\ub294 \ud68c\uace0 \ubb34\ub978 \ubd80\ubd84)\n",
+      "# substance: \ubb3c\n",
+      "# \ubb3c\uc9c8\uc758 \ubd80\ubd84\uc5b4\n",
       "wn.synset('tree.n.01').substance_meronyms()"
      ],
      "language": "python",
@@ -8632,6 +8733,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# \uc804\uccb4\uc5b4\uc5d0 \uc18d\ud574\uc788\ub294 \uac83\n",
       "wn.synset('tree.n.01').member_holonyms()"
      ],
      "language": "python",
@@ -8718,6 +8820,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "### \ub3d9\uc0ac(Verb)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "- entail: \uc218\ubc18\ud558\ub2e4"
      ]
     },
@@ -8765,6 +8874,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# tease: \ub180\ub9ac\ub2e4\n",
+      "# arouse: \ubd88\ub7ec\uc77c\uc73c\ud0a4\ub2e4\n",
+      "# disappoint: \uc2e4\ub9dd\uc2dc\ud0a4\ub2e4\n",
       "wn.synset('tease.v.03').entailments()"
      ],
      "language": "python",
@@ -8785,7 +8897,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- antonymy: \ubc18\uc758\uc131"
+      "### \uba85\uc0ac antonymy: \ubc18\uc758\uc131"
      ]
     },
     {
@@ -8813,6 +8925,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# \ub0a8\ub2e4\n",
       "wn.lemma('rush.v.01.rush').antonyms()"
      ],
      "language": "python",
@@ -9195,6 +9308,16 @@
       "- baleen: very specific\n",
       "- vertebrate: \uad49\uc7a5\ud788 \uc77c\ubc18\uc801\n",
       "- entity: completely general"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- \uae4a\uc774\uac00 \ub0ae\uc73c\uba74 \uae08\ubc29 \ub05d\ub09c\ub2e4\n",
+      "- \uace0\ub798\uc5d0 \ud558\uc704\uc5b4\uac00 \ub9ce\uc73c\uba74 \uae4a\uc774\uac00 \uae4a\uc5b4\uc9c4\ub2e4.\n",
+      "- \uc720\uc758\uc5b4\uac74 \uc0c1\uc704\uc5b4\uac74 \uae4a\uc774\uac00 \uacc4\uc18d \ub098\uc628\ub2e4.\n",
+      "- \ub2e4 \ub611\uac19\uc9c0 \uc54a\ub2e4\ub294\uac78 \uc54c\uc544\uc57c \ud558\ub2c8\uae4c"
      ]
     },
     {
